# gpupixel

./: CMakeLists.txt  README.md  format_code.sh
.github/workflows/: release.yml
cli/: CMakeLists.txt
cli/desktop/: gpupixel_wrapper.h  main.cpp
demo/: CMakeLists.txt
demo/desktop/: app.cc
demo/ios/demo.xcodeproj/: project.pbxproj
demo/ios/demo/ImageFilter/: ImageFilterController.mm
demo/ios/demo/VideoFilter/: VideoFilterController.mm
demo/mac/demo/: ViewController.mm
demo/mac/demo.xcodeproj/: project.pbxproj
docs/docs/en/guide/: build.md  demo.md
docs/docs/zh/guide/: build.md  demo.md
gpupixel/: CMakeLists.txt  gpupixel.h
gpupixel/android/jni/: jni_face_detector.cc  jni_filter.cc  jni_gpupixel.cc  jni_sink_raw_data.cc  jni_source.cc  jni_source_image.cc  jni_source_raw_data.cc
gpupixel/core/: gpupixel_context.cc  gpupixel_context.h  gpupixel_define.h  gpupixel_framebuffer.cc  gpupixel_framebuffer.h  gpupixel_framebuffer_factory.cc  gpupixel_framebuffer_factory.h  gpupixel_gl_include.h  gpupixel_program.cc  gpupixel_program.h
gpupixel/face_detector/: face_detector.cc  face_detector.h  face_detector_imp.cc  face_detector_imp.h
gpupixel/filter/: beauty_face_filter.cc  beauty_face_filter.h  beauty_face_filter_impl.cc  beauty_face_filter_impl.h  beauty_face_unit_filter.cc  beauty_face_unit_filter.h  bilateral_filter.cc  bilateral_filter.h  blusher_filter.cc  blusher_filter.h  blusher_filter_impl.cc  box_blur_filter.cc  box_blur_filter.h  box_difference_filter.cc  box_difference_filter.h  box_high_pass_filter.cc  box_high_pass_filter.h  box_mono_blur_filter.cc  box_mono_blur_filter.h  brightness_filter.cc  brightness_filter.h  canny_edge_detection_filter.cc  canny_edge_detection_filter.h  color_invert_filter.cc  color_invert_filter.h  color_matrix_filter.cc  color_matrix_filter.h  contrast_filter.cc  contrast_filter.h  convolution3x3_filter.cc  convolution3x3_filter.h  crosshatch_filter.cc  crosshatch_filter.h  directional_non_maximum_suppression_filter.cc  directional_non_maximum_suppression_filter.h  directional_sobel_edge_detection_filter.cc  directional_sobel_edge_detection_filter.h  emboss_filter.cc  emboss_filter.h  exposure_filter.cc  (+62 more)
gpupixel/sink/: sink.cc  sink.h  sink_raw_data.cc  sink_raw_data.h  sink_raw_data_imp.cc  sink_raw_data_imp.h  sink_render.cc  sink_render.h  sink_render_imp.cc  sink_render_imp.h
gpupixel/sink/objc/: gpupixel_sink.h  gpupixel_view.h  gpupixel_view.mm
gpupixel/source/: source.cc  source_image.cc  source_image.h  source_image_imp.cc  source_raw_data.cc  source_raw_data.h  source_raw_data_imp.cc  source_raw_data_imp.h
gpupixel/utils/: dispatch_queue.cc  math_toolbox.h  util.cc
include/gpupixel/: gpupixel.h
include/gpupixel/filter/: face_makeup_filter.h  filter.h
include/gpupixel/sink/: sink_raw_data.h
include/gpupixel/sink/objc/: gpupixel_sink.h
include/gpupixel/source/: source.h  source_raw_data.h
src/: CMakeLists.txt
src/android/java/gpupixel/: build.gradle
src/android/jni/: jni_face_detector.cc  jni_filter.cc  jni_gpupixel.cc  jni_helpers.cc  jni_sink_raw_data.cc  jni_source.cc  jni_source_image.cc  jni_source_raw_data.cc
src/core/: gpupixel.h  gpupixel_context.h  gpupixel_framebuffer.h  gpupixel_framebuffer_factory.cc  gpupixel_framebuffer_factory.h  gpupixel_program.cc  gpupixel_program.h
src/face_detector/: face_detector.cc  face_detector.h  face_detector_imp.cc
src/filter/: beauty_face_filter.cc  beauty_face_filter.h  beauty_face_filter_impl.cc  beauty_face_filter_impl.h  beauty_face_unit_filter.cc  beauty_face_unit_filter.h  bilateral_filter.cc  bilateral_filter.h  blusher_filter.cc  blusher_filter.h  blusher_filter_impl.cc  blusher_filter_impl.h  box_blur_filter.cc  box_blur_filter.h  box_difference_filter.cc  box_difference_filter.h  box_high_pass_filter.cc  box_high_pass_filter.h  box_mono_blur_filter.cc  box_mono_blur_filter.h  brightness_filter.cc  brightness_filter.h  canny_edge_detection_filter.cc  canny_edge_detection_filter.h  color_invert_filter.cc  color_invert_filter.h  color_matrix_filter.cc  color_matrix_filter.h  contrast_filter.cc  contrast_filter.h  convolution3x3_filter.cc  convolution3x3_filter.h  crosshatch_filter.cc  crosshatch_filter.h  directional_non_maximum_suppression_filter.cc  directional_non_maximum_suppression_filter.h  directional_sobel_edge_detection_filter.cc  directional_sobel_edge_detection_filter.h  emboss_filter.cc  emboss_filter.h  (+63 more)
src/sink/: sink.cc  sink.h  sink_raw_data.cc  sink_raw_data.h  sink_raw_data_imp.cc  sink_raw_data_imp.h  sink_render.cc  sink_render.h  sink_render_imp.cc  sink_render_imp.h
src/sink/objc/: gpupixel_sink.h  gpupixel_view.h  gpupixel_view.mm  objc_sink.cc  objc_sink.h
src/source/: source.cc  source.h  source_image.cc  source_image.h  source_image_imp.cc  source_image_imp.h  source_raw_data.cc  source_raw_data.h  source_raw_data_imp.cc  source_raw_data_imp.h
src/utils/: math_toolbox.cc  math_toolbox.h  util.cc  util.h
